--- a/views/layout.html
+++ b/views/layout.html
@@ -7,8 +7,8 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles.css">
         <title>Recette de cuisine</title>
 </head>
 
@@ -30,8 +30,8 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-<script src="./js/jquery.min.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
