--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
 
 body {
     
-    background-image: url(./uploads/cookingfond.jpg);
+    background-image: url(./image/cookingfond.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
