--- a/views/recettes/index.html
+++ b/views/recettes/index.html
@@ -23,9 +23,9 @@
     </div>
 
 
-    <div class="panel-footer">
+    <!-- <div class="panel-footer">
         <h4>{{p.description}}</h4>
-    </div>
+    </div> -->
 
 
 </div>
