--- a/views/recettes/add.html
+++ b/views/recettes/add.html
@@ -8,36 +8,38 @@
     </a>
 </div>
 <form method="POST" action="{{endpoint}}" enctype="multipart/form-data">
-    <div class="form-group">
+    <div class="form-group input-group-lg">
         <label for="name">
             <h4>Nom de la recette</h4>
         </label>
-        <input type="text" class="form-control" id="name" name="name" value="{{recette.name}}">
+        <input type="text" class="form-control one" id="name" name="name"  value="{{recette.name}}">
 
     </div>
     <div class="form-group">
         <label for="nbpersonne">
-            <h4>Nb de personne</h4>
         </label>
-        <input type="text" class="form-control" id="nbpersonne" name="nbpersonne" value="{{recette.nbpersonne}}">
+        <h4>Nb de personnes</h4>
+        <input type="text" class="form-control" id="nbpersonne" name="nbpersonne" 
+         value="{{recette.nbpersonne}}">
     </div>
     <div class="form-group">
         <label for="préparation">
-            <h4>Temps de préparation</h4>
+            
         </label>
-        <input type="text" class="form-control" id="préparation" name="préparation" value="{{recette.préparation}}">
+        <h4>Temps de préparation</h4>
+        <input type="text" class="form-control" id="préparation" name="préparation"  value="{{recette.préparation}}">
     </div>
     <div class="form-group">
-        <label for="cuisson">
-            <h4>Temps de cuisson</h4>
+        <label for="cuisson">    
         </label>
-        <input type="text" class="form-control" id="cuisson" name="cuisson" value="{{recette.cuisson}}">
+        <h4>Temps de cuisson</h4>
+        <input type="text" class="form-control" id="cuisson" name="cuisson"  value="{{recette.cuisson}}">
     </div>
     <div class="form-group">
-        <label for="repos">
-            <h4>Temps de repos</h4>
+        <label for="repos">   
         </label>
-        <input type="text" class="form-control" id="repos" name="repos" value="{{recette.repos}}">
+        <h4>Temps de repos</h4>
+        <input type="text" class="form-control" id="repos" name="repos"  value="{{recette.repos}}">
     </div>
 
     <div class="form-group">
