--- a/views/recettes/add.html
+++ b/views/recettes/add.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="text-center">
     <a href="/" style="text-decoration: none; color: brown;">
-        <h1>LA CUISINE EN STOCK</h1>
+        <h1>COOKING EN STOCK</h1>
     </a>
 </div>
 <form method="POST" action="{{endpoint}}" enctype="multipart/form-data">
