--- a/views/recettes/detail.html
+++ b/views/recettes/detail.html
@@ -5,7 +5,7 @@
 
 <div class="text-center">
     <a href="/" style="text-decoration: none; color: brown;">
-        <h1>LA CUISINE EN STOCK</h1>
+        <h1>COOKING EN STOCK</h1>
     </a>
 </div>
 <div class="row">
