--- a/views/recettes/index.html
+++ b/views/recettes/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="text-center">
-    <h1>LA CUISINE EN STOCK</h1>
+    <h1>COOKING EN STOCK</h1>
 </div>
 
 <a href="/new" class="btn btn-primary ">Ajouter une recette</a>
