--- a/views/recettes/listecourse.html
+++ b/views/recettes/listecourse.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="text-center">
     <a href="/" style="text-decoration: none; color: brown;">
-        <h1>LA CUISINE EN STOCK</h1>
+        <h1>COOKING EN STOCK</h1>
     </a>
 </div>
 
@@ -12,15 +12,16 @@
 <h2>Liste de course : </span></h2>
 <hr>
 
-<h2 style="color:brown;">{{recette.name}}</h2>
-<ul>
-    <li>
+<h2 style="color:brown; text-align: center;">{{recette.name}}</h2>
+<!-- <ul>
+    <li> -->
         
-
-            <h4>{{recette.description}}</h4>
+        <p class="lead" style="font-size: 25px;">
+            {{recette.description}}
+        </p>
         
-    </li>
-</ul>
+    <!-- </li>
+</ul> -->
 
 
 
