--- a/views/layout.html
+++ b/views/layout.html
@@ -9,6 +9,22 @@
         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles.css">
+    <script>
+        function print(pdf) {
+            // Créer un IFrame.
+            var iframe = document.createElement('iframe');  
+            // Cacher le IFrame.    
+            iframe.style.visibility = "hidden"; 
+            // Définir la source.    
+            iframe.src = pdf;        
+            // Ajouter le IFrame sur la page Web.    
+            document.body.appendChild(iframe);  
+            iframe.contentWindow.focus();       
+            iframe.contentWindow.print(); // Imprimer.
+        }
+    </script>
+
+
         <title>Recette de cuisine</title>
 </head>
 
