--- a/views/categories/vutype.html
+++ b/views/categories/vutype.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="text-center">
+<!-- <div class="text-center">
     <a href="/" style="text-decoration: none; color: brown;">
-        <h1>LA CUISINE EN STOCK</h1>
+        <h1>COOK'IN STOCK</h1>
     </a>
-</div>
+</div> -->
 
 <hr>
 
