--- a/views/layout.html
+++ b/views/layout.html
@@ -34,6 +34,11 @@
     
     
     <div class="container">
+        <div class="text-center">
+            <a href="/" style="text-decoration: none; color: brown;">
+                <h1>COOK'IN STOCK</h1>
+            </a>
+        </div>
         
         {% block content %}
         
