modif btn liste

--- a/views/recettes/detail.html
+++ b/views/recettes/detail.html
@@ -4,7 +4,7 @@
 
 
 
-<button class="btn btn-primary" onclick="print('{{recette._id}}')">Imprimer en PDF</button>
+
 <div class="row">
     <div class="col-sm-3">
         <img src="/uploads/{{recette.picture}}" alt="{{recette.name}}" style="width: 100%;">
@@ -18,7 +18,7 @@
         
         
         <h2 style="color:brown;">{{recette.name}}</h2>
-
+<button class="btn btn-primary" onclick="print('{{recette._id}}')">Imprimer la recette</button>
         <br>
         <h2 style="text-decoration: underline;">Ingrédients</h2>
         <p class="lead" style="font-size: 30px;">
