modif code iframe

--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
     <script>
         function print(pdf) {
             // Créer un IFrame.
-            var iframe = document.createElement('iframe');  
+            const iframe = document.createElement('iframe');  
             // Cacher le IFrame.    
             iframe.style.visibility = "hidden"; 
             // Définir la source.    
@@ -29,10 +29,6 @@
 </head>
 
 <body>
-
-   
-    
-    
     <div class="container">
         <div class="text-center">
             <a href="/" style="text-decoration: none; color: brown;">
