modif template detail

--- a/views/recettes/detail.html
+++ b/views/recettes/detail.html
@@ -2,23 +2,24 @@
 
 {% block content %}
 
-
-
-
-<div class="row">
-    <div class="col-sm-3">
+<div class="row justify-content-center">
+    <div class="col-sm-5 ">
         <img src="/uploads/{{recette.picture}}" alt="{{recette.name}}" style="width: 100%;">
 
     </div>
-    
-    <div class="col-sm-9">
+</div><br>
+
+<div class="row justify-content-center">
+
+
+    <div class="col-sm-11">
 
         <a href="/add/{{recette._id}}" class="btn btn-success">Editer</a>
         <a href="/delete/{{recette._id}}" class="btn btn-danger">Supprimer</a><br><br>
-        
-        
+
+
         <h2 style="color:brown;">{{recette.name}}</h2>
-<button class="btn btn-primary" onclick="print('{{recette._id}}')">Imprimer la recette</button>
+        <button class="btn btn-primary" onclick="print('{{recette._id}}')">Imprimer la recette</button>
         <br>
         <h2 style="text-decoration: underline;">Ingrédients</h2>
         <p class="lead" style="font-size: 30px;">
