--- a/views/recettes/listecourse.html
+++ b/views/recettes/listecourse.html
@@ -10,11 +10,11 @@
 
 <h2 style="color:brown; text-align: center;">{{recette.name}}</h2>
 
-        
-        <p class="lead" style="font-size: 25px;">
-            {{recette.description}}
-        </p>
-        
+        <ul>
+        <li> <p class="lead" style="font-size: 25px;">
+            {{recette.description}}</p>
+        </li>
+        </ul>
 
 
 
