--- a/views/recettes/listecourse.html
+++ b/views/recettes/listecourse.html
@@ -8,14 +8,14 @@
 <h2>Liste de course : </span></h2>
 <hr>
 
-<h2 style="color:brown; text-align: center;">{{recette.name}}</h2>
 
-        <ul>
-        <li> <p class="lead" style="font-size: 25px;">
+
+        <tr>
+        <th> <p class="lead" style="font-size: 25px;">
             {{recette.description}}</p>
-        </li>
-        </ul>
-
-
+        </th>
+    </tr>
+        
+        
 
 {% endblock %}
