--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-    background-image: url(./image/cookingfond.jpg);
+    background-image: url(./image/old-paper-642132__480.webp);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
