--- a/views/categories/vutype.html
+++ b/views/categories/vutype.html
@@ -22,7 +22,7 @@
 {% for type in recettes %} 
 <div class="panel panel-default" >
     <div class="panel-heading">
-        <a href="/{{p._id}}" style="text-decoration: none; color:brown;" ><h4 style="font-size: 30px;">{{type.name}}</h4></a>
+        <a href="/{{p._id}}" style="text-decoration: none; color:brown;" ><h4 style="font-size: 30px;">{{recettes.name}}</h4></a>
     </div>
    
     
