ajout image et date auto

--- a/views/layout.html
+++ b/views/layout.html
@@ -43,7 +43,9 @@
         <hr>
        
         <div class="text-center">
-           <h3>Copyright Cookinstock ©2020 </h3> 
+           <h3>Copyright Cookinstock © <script>
+            document.write(new Date().getFullYear());
+        </script></h3> 
         </div>
     </div>
 
