--- a/views/404.html
+++ b/views/404.html
@@ -7,7 +7,9 @@
             <h3 class="text-uppercase">Page Not Found !</h3>
             <p class="text-muted m-t-30 m-b-30">YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
             <a href="/" class="btn btn-danger btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
-        <footer class="footer text-center">2020 © brewer&beer</footer>
+        <footer class="footer text-center"><script>
+            document.write(new Date().getFullYear());
+        </script> © brewer&beer</footer>
     </div>
 </section>
 <!-- jQuery -->
