--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,7 @@
     </script>
 
 
-        <title>Recette de cuisine</title>
+        <title>Recette de cuisine, dessert, entrée, soupe, poisson, viande, salade composée, végetarien, mélanger les ingrédients, cuisson vapeur, cuisson au four</title>
 </head>
 
 <body>
