--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,10 @@
 /* font-family: 'Gloria Hallelujah', cursive; */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
 
 
 body {
@@ -9,6 +15,11 @@ body {
     background-attachment: fixed;
     height: 100vh;
 
+}
+hr{
+  border: 2px solid green;
+  border-radius: 5px; 
+    
 }
 
 img {
@@ -51,6 +62,12 @@ h2 {
 h2:hover {
     color: red;
 
+}
+h3{
+    font-size: 50px;
+    text-shadow: 2px 2px 2px greenyellow;
+    box-shadow: 3px 3px 10px 5px #000,
+    0 0 20px rgba(0, 0, 0, .5) ;
 }
 
 h4 {
