--- a/views/categories/vutype.html
+++ b/views/categories/vutype.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<!-- <div class="text-center">
+<div class="text-center">
     <a href="/" style="text-decoration: none; color: brown;">
         <h1>COOK'IN STOCK</h1>
     </a>
-</div> -->
+</div>
 
 <hr>
-<h2>Catégories de recette : <span style="color: {{type.color}};">{{type.name}}</span></h2>
+<h2>Catégories de recette : <span style="color: {{type.color}}">{{type.name}}</span></h2>
 <h2>liste recette : <span >{{p.id}}</span></h2>
 
 <hr>
