--- a/views/categories/vutype.html
+++ b/views/categories/vutype.html
@@ -8,7 +8,7 @@
 </div>
 
 <hr>
-<h2>Catégories de recette : <span style="color: {{type.color}}">{{type.name}}</span></h2>
+<!-- <h2>Catégories de recette : <span style="color: {{type.color}}">{{type.name}}</span></h2> -->
 <h2>liste recette : <span >{{p.id}}</span></h2>
 
 <hr>
