--- a/views/recettes/detail.html
+++ b/views/recettes/detail.html
@@ -49,7 +49,7 @@
         <br>
         <h3>Catégories : {% for t in recette.types %}
             <a href="/types/{{t.name}}" class="label label-default"
-                style="background-color: {{t.color}}; font-size:35px;  color: #fff;">{{t.name}}</a>
+                >{{t.name}}</a>
             {% endfor %}</h3>
 
 
